# unreal-blueprint-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-03-05-blueprint-expansion-design.md
src/unreal_blueprint_mcp/: __init__.py  __main__.py  config.py  editor_bridge.py  server.py
tests/: test_server.py
